@@ -106,7 +106,7 @@
 <option name="useadddirectives" type="boolean" change-action="build">false</option>
 <option name="linkconfig" type="string" change-action="build">Standard</option>
 <option name="flashinfo" type="string" change-action="build">000000-0001FF</option>
-<option name="ram" type="string" change-action="build">B8000-BfFFFF</option>
+<option name="ram" type="string" change-action="build">B80000-BfFFFF</option>
 <option name="rom" type="string" change-action="build">000000-03FFFF</option>
 <option name="extio" type="string" change-action="build">000000-00FFFF</option>
 <option name="intio" type="string" change-action="build">000000-0000FF</option>
